# wavtomp3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindLame.cmake
src/: asyncqueue.hpp  encoder.cpp  encoder.h  file.h  filefactory.h  filesystem.h  main.cpp  mp3file.cpp  mp3file.h  wav.cpp  wav.h  wavfile.cpp  wavfile.h
src/nix/: filesystem.cpp
src/win/: filesystem.cpp
